// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should reject a map with the wrong key type 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected a string, received a number",
    "path": [],
    "received": "number",
  },
]
`;

exports[`should reject a map with the wrong value type 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received a string",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should reject values that are not maps 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "map",
    "message": "Expected a map, received an array",
    "path": [],
    "received": "array",
  },
]
`;

exports[`should reject values that are not maps 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "map",
    "message": "Expected a map, received null",
    "path": [],
    "received": "null",
  },
]
`;
